# FailSense

./: .env.example  COPILOT_FINAL_SPEC.md  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  start.ps1
incident_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
incident_env/server/: Dockerfile  __init__.py  app.py  graders.py  incident_env_environment.py  requirements.txt  scenario_engine.py
server/: app.py
sql_debug_env/: .dockerignore  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_local.py
sql_debug_env/openenv_sql_debug_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sql_debug_env/server/: app.py  graders.py  sql_debug_env_environment.py  task_registry.py
